Jajascript challenge ok. Best performances using TreeSet, comparable and ArrayList